fixing spacing

--- a/static/css/prettyMain.css
+++ b/static/css/prettyMain.css
@@ -117,7 +117,7 @@ section.aboutSection{
 	display: inline-block;
 	float: right;
 	line-height: 1.75rem;
-	margin: 7% 8% 0 0;
+	margin: 6% 8% 0 0;
 	width: 45%;
 }
 
